tests/samples/negative/generics/method_local_argument_count.ax
module method_local_argument_count;

struct Box {
    value: i32;
}

impl Box {
    fn id<T>(self: &Box, value: T) -> T {
        return value;
    }
}

fn main() -> i32 {
    let box: Box = Box { value: 1 };
    return box.id();
}
